--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "portmgr"
-version = "1.8.0dev1"
+version = "1.8.0dev2"
 description = "Simple command interface to manage multiple Docker container"
 readme = "README.md"
 license = "MIT"
@@ -11,6 +11,11 @@ dependencies = [
     "pyyaml~=6.0.2",
     "tabulate~=0.8.9",
 ]
+[tool.uv]
+package = true
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 [project.urls]
 Website = "https://github.com/Craeckie/portmgr"
 Repository = "https://github.com/Craeckie/portmgr.git"
