--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "portmgr"
-version = "1.8.1dev0"
+version = "1.8.3"
 description = "Simple command interface to manage multiple Docker container"
 readme = "README.md"
 license = "MIT"
